test/kube2e/upgrade/assets/petstore_vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petstore
  namespace: gloo-system
  ownerReferences: []
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - exact: /all-pets
        options:
          prefixRewrite: /api/pets
        routeAction:
          single:
            upstream:
              name: gloo-system-petstore-8080
              namespace: gloo-system
